--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raspberry Pi Photo Frame</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/inter.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/7.4.2/pixi.min.js"></script>
+  <script src="/lib/pixi.js/dist/pixi.min.js"></script>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
