--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raspberry Pi Photo Frame</title>
   <link rel="stylesheet" href="fonts/inter.css">
